[gd_scene load_steps=7 format=2]

[ext_resource path="res://entities/aphids/Aphid.gd" type="Script" id=1]
[ext_resource path="res://entities/player/HitArea.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[sub_resource type="CircleShape2D" id=2]
radius = 7.0

[sub_resource type="CircleShape2D" id=3]
radius = 100.0

[node name="Aphid" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HitArea" type="Area2D" parent="."]
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
shape = SubResource( 2 )

[node name="DetectArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource( 3 )

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="FearTimer" type="Timer" parent="."]

[connection signal="area_entered" from="HitArea" to="HitArea" method="_on_HitArea_area_entered"]
[connection signal="body_entered" from="DetectArea" to="." method="_on_DetectArea_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_DetectArea_body_exited"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="FearTimer" to="." method="_on_FearTimer_timeout"]
